--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,11 @@
     "name": "mifesta/hyphenation-php",
     "type": "library",
 
-    "description": "A PHP class to generate PDF files from HTML with Unicode/UTF-8 and CJK support",
-    "keywords": ["php", "hyphenation"],
+    "description": "Arrangements of hyphenation in words",
+    "keywords": [
+        "php",
+        "hyphenation"
+    ],
 
     "license": ["GPL-2.0"],
 
