--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,31 @@
 {
-    "name": "mifesta/hyphenation-php",
-    "type": "library",
-
-    "description": "Arrangements of hyphenation in words",
-    "keywords": [
-        "php",
-        "hyphenation"
-    ],
-
-    "license": ["GPL-2.0"],
-
-    "authors": [
-        {
-            "name": "Sergei Gruzdov",
-            "role": "Publisher"
-        }
-    ],
-
-    "autoload": {
-        "classmap": ["hyphenation.php", "classes"]
-    },
-
-    "scripts": {
-        "post-install-cmd": [
-            "php -r \"chmod('./compliled', 0777);\"",
-            "php -r \"chmod('./conf', 0777);\"",
-            "php -r \"chmod('./patterns', 0777);\""
-        ]
+  "name": "mifesta/hyphenation-php",
+  "type": "library",
+  "description": "Arrangements of hyphenation in words",
+  "keywords": [
+    "php",
+    "hyphenation"
+  ],
+  "license": [
+    "GPL-2.0"
+  ],
+  "authors": [
+    {
+      "name": "Sergei Gruzdov",
+      "role": "Publisher"
     }
+  ],
+  "autoload": {
+    "classmap": [
+      "hyphenation.php",
+      "classes"
+    ]
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "php -r \"chmod('./compiled', 0777);\"",
+      "php -r \"chmod('./conf', 0777);\"",
+      "php -r \"chmod('./patterns', 0777);\""
+    ]
+  }
 }
