--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "mifesta/hyphenation-php",
   "version": "1.0.1",
+  "minimum-stability": "stable",
   "type": "library",
   "description": "Arrangements of hyphenation in words",
   "keywords": [
