--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
   "name": "mifesta/hyphenation-php",
   "version": "1.0.1",
-  "minimum-stability": "stable",
   "type": "library",
   "description": "Arrangements of hyphenation in words",
   "keywords": [
@@ -18,9 +17,8 @@
     }
   ],
   "autoload": {
-    "classmap": [
-      "hyphenation.php",
-      "classes"
+    "files": [
+      "src/hyphenation.php"
     ]
   },
   "scripts": {
