--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "mifesta/hyphenation-php",
+  "minimum-stability": "dev",
   "version": "1.0.1",
   "type": "library",
   "description": "Arrangements of hyphenation in words",
@@ -20,6 +21,9 @@
     "files": [
       "src/hyphenation.php"
     ]
+  },
+  "require": {
+
   },
   "scripts": {
     "post-install-cmd": [
