--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   "homepage": "https://hyphenation.mifesta.com",
   "type": "library",
   "require": {
-    "php": ">=5.2.0"
+    "php": ">=5.2.0",
+    "mifesta/filesystem-php": ">=1.0.0"
   },
   "require-dev": {
   },
@@ -27,12 +28,5 @@
       "Hyphenation\\": "src/"
     }
   },
-  "minimum-stability": "stable",
-  "scripts": {
-    "post-install-cmd": [
-      "php -r \"chmod('./src/compiled', 0777);\"",
-      "php -r \"chmod('./src/conf', 0777);\"",
-      "php -r \"chmod('./src/patterns', 0777);\""
-    ]
-  }
+  "minimum-stability": "stable"
 }
