--- a/src/conf/ru_RU.conf
+++ b/src/conf/ru_RU.conf
@@ -1,8 +1,8 @@
 internal_encoding = UTF-8
 left_limit = 2
 right_limit = 2
-alphabet = ‡·‚„‰Â(∏>Â)ÊÁËÈÍÎÏÌÓÔÒÚÛÙıˆ˜¯˘˙˚¸˝˛ˇ
-alphabetUC = ¿¡¬√ƒ≈®∆«»… ÀÃÕŒœ–—“”‘’÷◊ÿŸ⁄€‹›ﬁﬂ
+alphabet = –∞–±–≤–≥–¥–µ(—ë>–µ)–∂–∑–∏–π–∫–ª–º–Ω–æ–ø—Ä—Å—Ç—É—Ñ—Ö—Ü—á—à—â—ä—ã—å—ç—é—è
+alphabetUC = –ê–ë–í–ì–î–ï–Å–ñ–ó–ò–ô–ö–õ–ú–ù–û–ü–†–°–¢–£–§–•–¶–ß–®–©–™–´–¨–≠–Æ–Ø
 
 rules = ../patterns/ru_RU.al
 rules = ../patterns/ru_RU.addition
