--- a/src/conf/ru_RU.conf
+++ b/src/conf/ru_RU.conf
@@ -1,10 +1,10 @@
 internal_encoding = UTF-8
-left_limit = 2
-right_limit = 2
+left_limit = 4
+right_limit = 4
 alphabet = абвгде(ё>е)жзийклмнопрстуфхцчшщъыьэюя
 alphabetUC = АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ
 
 rules = ../patterns/ru_RU.al
 rules = ../patterns/ru_RU.addition
 rules = ../patterns/ru_RU.perfect
-compiled = ../compiled/ru_RU.compiled
+compiled = ../completed/ru_RU.compiled
