--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
   "type": "library",
   "require": {
     "php": ">=5.2.0",
-    "mifesta/filesystem-php": ">=1.0.0"
+    "mifesta/filesystem-php": ">=1.0.0",
+    "ext-iconv": "*",
+    "ext-mbstring": "*"
   },
   "require-dev": {
   },
